# rsmsg

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  starting.md
.github/: dependabot.yml
.github/workflows/: release.yml
crates/client-core/: Cargo.toml
crates/client-core/src/: core.rs  key_store.rs  lib.rs  local_vault.rs  session_store.rs  storage.rs  transport.rs  types.rs
crates/client-ui/: Cargo.toml  build.rs
crates/client-ui/locales/: en.json  ru.json
crates/client-ui/src/: app.rs  history.rs  localization.rs  main.rs  media.rs  message_ui.rs  notifications.rs  settings.rs  tray.rs  updater.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/migrations/: 0001_init.sql  0002_device_auth_tokens.sql  0003_users.sql  0004_signed_prekeys.sql  0005_blobs.sql  0006_registration_invites.sql  0007_user_blocks.sql
crates/server/src/: api_error.rs  app_state.rs  auth.rs  lib.rs  login_rate_limit.rs  main.rs  router.rs  version_gate.rs
crates/server/src/domain/: blob.rs  call_signaling.rs  device.rs  messaging.rs  mod.rs  realtime.rs  user.rs
crates/server/src/handlers/: blob.rs  call_signaling.rs  device.rs  health.rs  messaging.rs  mod.rs  user.rs  ws.rs
crates/server/src/repository/: auth_tokens.rs  blobs.rs  devices.rs  messages.rs  mod.rs  prekeys.rs  registration_invites.rs  stats.rs  user_blocks.rs  users.rs
crates/server/src/services/: messages.rs  mod.rs  stats.rs
crates/server/tests/: api_auth.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
deploy/: .env.example  README.md  docker-compose.yml
deploy/prod/: .env.example  README.md  docker-compose.yml  generate-invite.sh  logs.sh  nginx.conf.example  update-server.sh  update-with-turn.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_RU.md  CONTRIBUTING.md  CONTRIBUTING_RU.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_RU.md  RUST_API.md  USER_GUIDE.md  USER_GUIDE_RU.md  release.md
scripts/: build-windows.sh
scripts/release/: build-linux.sh  build-macos.sh  build-windows.ps1  generate-manifest.sh  windows-installer.nsi
