[workspace]
members = [
    "crates/shared",
    "crates/crypto",
    "crates/client-core",
    "crates/client-ui",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
cpal = "0.16"
ed25519-dalek = { version = "2", features = ["rand_core"] }
eframe = "0.33"
egui = "0.33"
futures-util = "0.3"
hkdf = "0.12"
rand = "0.8"
notify-rust = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tray-icon = "0.21"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webrtc = "0.17"
x25519-dalek = { version = "2", features = ["static_secrets"] }
