[package]
name = "client-ui"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
client-core = { path = "../client-core" }
eframe.workspace = true
egui.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shared = { path = "../shared" }
rfd.workspace = true
base64.workspace = true
tokio.workspace = true
uuid.workspace = true
