[package]
name = "client-ui"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
client-core = { path = "../client-core" }
cpal.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
notify-rust.workspace = true
nokhwa.workspace = true
opus.workspace = true
openh264.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shared = { path = "../shared" }
rfd.workspace = true
base64.workspace = true
bytes.workspace = true
tokio.workspace = true
tray-icon.workspace = true
uuid.workspace = true
webrtc.workspace = true
webrtc-media.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true
