[package]
name = "crypto"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
rand.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
