[package]
name = "server"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
shared = { path = "../shared" }
uuid.workspace = true
